updte 2 index.html

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
     <br>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veritatis pariatur asperiores vero cumque esse molestias rerum iusto sapiente? Repellendus culpa accusantium labore eum facilis deleniti repellat eaque blanditiis fuga.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime pariatur reprehenderit ullam voluptatum corporis, eaque, ad vel iusto commodi cumque distinctio. Ipsum itaque tempora laboriosam reprehenderit dolore error. Perspiciatis, repellendus?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, dolorem eum suscipit impedit id nihil minus qui sed recusandae aperiam saepe eos, exercitationem eaque! Ipsam soluta reprehenderit nesciunt dignissimos temporibus!</p>
 </body>
 </html>
